# skill_finder

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md
src/: lib.rs  main.rs
tests/: skill_tests.rs
tests/skills/code-linter/: SKILL.md
tests/skills/database-migration/: SKILL.md
tests/skills/image-resizer/: SKILL.md
tests/skills/pdf-processing/: SKILL.md
tests/skills/web-scraper/: SKILL.md
